# spartan-vm

./: .gitignore  ARCHITECTURE.md  Cargo.toml  PLAN.md  README.md  STATUS.md  expanded_output.rs  expanded_vm.rs  flake.nix
.cargo/: config.toml
.github/workflows/: ci.yml  test-runner.yml
ast_evaluator/ast_evaluator/: Cargo.toml
ast_evaluator/ast_evaluator/src/: lib.rs
binary_rep/src/: main.nr
compat_harness/: Cargo.toml
compat_harness/src/: lib.rs
dummy_merkle/: Nargo.toml  Prover.toml
dummy_merkle/src/: main.nr
just_add/src/: main.nr
many_poseidons/: Nargo.toml  Prover.toml
many_poseidons/src/: main.nr
native-runner/: Cargo.toml  README.md  build.rs
native-runner/src/: field.rs  main.rs  prover.rs  runner.rs
noir_examples/array_fun/: Nargo.toml
noir_examples/array_mul/: Prover.toml
noir_examples/array_mul/src/: main.nr
noir_examples/array_mul_2/: Nargo.toml  Prover.toml
noir_examples/array_mul_2/src/: main.nr
noir_examples/array_nested/: Prover.toml
noir_examples/array_nested/src/: main.nr
noir_examples/array_of_structs/: Nargo.toml  Prover.toml
noir_examples/array_of_structs/src/: main.nr
noir_examples/array_of_structs_2/: Prover.toml
noir_examples/array_of_structs_2/src/: main.nr
noir_examples/array_of_structs_mini/src/: main.nr
noir_examples/functions/: Nargo.toml
noir_examples/functions/src/: main.nr
noir_examples/just_add/: Nargo.toml
noir_examples/many_poseidons/: Prover.toml
noir_examples/many_poseidons/src/: main.nr
noir_examples/noir-passport-examples/complete_age_check/src/: main.nr
noir_examples/poseidon2_bench/: Nargo.toml
noir_examples/poseidon2_bench/src/: main.nr
noir_examples/power/: Prover.toml
noir_examples/power/src/: main.nr
noir_examples/power_small/: Nargo.toml  Prover.toml
noir_examples/power_small/src/: main.nr
noir_examples/rangechecks/: Nargo.toml  Prover.toml
noir_examples/rangechecks/src/: main.nr
noir_examples/rebuild_main_params/: Nargo.toml  Prover.toml
noir_examples/rebuild_main_params/src/: main.nr
noir_examples/skyscraper/: Nargo.toml
noir_examples/skyscraper/src/: main.nr
noir_examples/structs/: Prover.toml
noir_examples/structs/src/: main.nr
noir_examples/tuple_common_subexpression_elimination/: Nargo.toml  Prover.toml
noir_examples/tuple_common_subexpression_elimination/src/: main.nr
noir_tests/array_fun/src/: main.nr
noir_tests/array_mul/: Prover.toml
noir_tests/array_mul/src/: main.nr
noir_tests/array_nested/: Nargo.toml  Prover.toml
noir_tests/array_nested/src/: main.nr
noir_tests/array_of_structs_2/: Nargo.toml
noir_tests/array_of_structs_3/: Nargo.toml  Prover.toml
noir_tests/array_of_structs_3/src/: main.nr
noir_tests/array_of_structs_4/: Nargo.toml  Prover.toml
noir_tests/array_of_structs_4/src/: main.nr
noir_tests/array_of_structs_mini/: Nargo.toml  Prover.toml
noir_tests/just_add/: Prover.toml
noir_tests/power/: Nargo.toml  Prover.toml
noir_tests/power/src/: main.nr
noir_tests/struct/: Nargo.toml
noir_tests/struct/src/: main.nr
noir_tests/struct_literals/: Nargo.toml  Prover.toml
noir_tests/struct_literals/src/: main.nr
opcode-gen/: Cargo.toml
opcode-gen/src/: lib.rs
power/src/: main.nr
ptr_fun/: Nargo.toml
ptr_fun/src/: main.nr
spartan-vm-interpreter/: Cargo.toml
spartan-vm-interpreter/src/: array.rs  bytecode.rs  interpreter.rs  layouts.rs  lib.rs
spartan-vm-wasm/: Cargo.toml  README.md
spartan-vm-wasm/.cargo/: config.toml
spartan-vm-wasm/nodejs-test/: package.json  test.js
spartan-vm-wasm/src/: lib.rs
src/: abi_helpers.rs  api.rs  compiled_artifacts.rs  driver.rs  error.rs  lib.rs  project.rs
src/compiler/: ast.rs  common_subexpression_elimination.rs  condition_propagation.rs  constraint_solver.rs  dead_code_elimination.rs  deduplicate_phis.rs  explicit_witness.rs  fix_double_jumps.rs  flow_analysis.rs  mem2reg.rs  mod.rs  monomorphization.rs  pass_manager.rs  pull_into_assert.rs  r1cs_cleanup.rs  r1cs_gen.rs  retype_for_r1cs.rs  ssa.rs  taint_analysis.rs  union_find.rs  untaint_control_flow.rs  witness_generation.rs
src/compiler/analysis/: instrumenter.rs  liveness.rs  mod.rs  symbolic_executor.rs  types.rs  value_definitions.rs
src/compiler/codegen/: mod.rs
src/compiler/defunctionalize/: apply_gen.rs  context.rs  discovery.rs  mod.rs  signature.rs  transform.rs
src/compiler/ir/: type.rs
src/compiler/llvm_codegen/: field_ops.rs  mod.rs  runtime.rs  types.rs
src/compiler/passes/: arithmetic_simplifier.rs  box_fields.rs  common_subexpression_elimination.rs  condition_propagation.rs  dead_code_elimination.rs  deduplicate_phis.rs  explicit_witness.rs  fix_double_jumps.rs  mem2reg.rs  mod.rs  prepare_entry_point.rs  pull_into_assert.rs  rc_insertion.rs  rebuild_main_params.rs  remove_unreachable_blocks.rs  specializer.rs  struct_access_simplifier.rs  witness_to_ref.rs  witness_write_to_fresh.rs  witness_write_to_void.rs
src/compiler/phase1/: constraint_solver.rs  explicit_witness.rs  flow_analysis.rs  mod.rs  monomorphization.rs  ssa.rs  taint_analysis.rs  union_find.rs
src/compiler/phase1/ssa_gen/: converter.rs  function_converter.rs  type_converter.rs
src/compiler/phase2/: mod.rs
src/compiler/ssa_gen/: converter.rs  function_converter.rs  mod.rs  type_converter.rs
src/noir/: mod.rs  project.rs
src/vm/: array.rs  bytecode.rs  interpreter.rs  interpreter2.rs  mod.rs
ssa-builder/: Cargo.toml
ssa-builder/src/: lib.rs
tester/: Nargo.toml
wasm-runner/: README.md  package-lock.json  package.json
wasm-runner/src/: field.ts  index.ts  input.ts  memory.ts  runner.ts
wasm-runtime/: Cargo.toml  Cargo.toml.test
wasm-runtime/examples/: test_field.rs  verify_add.rs
wasm-runtime/src/: lib.rs
