[workspace]
resolver = "3"
members = ["opcode-gen", "ssa-builder", "wasm-runtime"]

[package]
name = "spartan-vm"
version = "0.1.0"
edition = "2024"

[dependencies]
fm = { git = "https://github.com/reilabs/noir.git", branch = "spartan-vm", package = "fm" }
nargo = { git = "https://github.com/reilabs/noir.git", branch = "spartan-vm", package = "nargo" }
nargo_toml = { git = "https://github.com/reilabs/noir.git", branch = "spartan-vm", package = "nargo_toml" }
noirc_driver = { git = "https://github.com/reilabs/noir.git", branch = "spartan-vm", package = "noirc_driver" }
noirc_errors = { git = "https://github.com/reilabs/noir.git", branch = "spartan-vm", package = "noirc_errors" }
noirc_frontend = { git = "https://github.com/reilabs/noir.git", branch = "spartan-vm", package = "noirc_frontend" }
noirc_evaluator = { git = "https://github.com/reilabs/noir.git", branch = "spartan-vm", package = "noirc_evaluator" }
noirc_abi = { git = "https://github.com/reilabs/noir.git", branch = "spartan-vm", package = "noirc_abi" }

clap = { version = "4.5.17", features = ["unstable-v5"] }
derivative = "2.2.0"
indoc = "2.0.5"
itertools = "0.14.0"
thiserror = "2.0.12"
tempfile = "3.19.1"
petgraph = "0.6.5" # Cannot bump as it is currently required to be this version by a dependency
convert_case = "0.8.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0"
toml = { version = "0.8.20" }
ark-bn254 = "0.5.0"
ark-ff = "0.5.0"

# LLVM codegen
inkwell = { version = "0.5", features = ["llvm18-0"] }
graphviz-rust = "0.6.0"
plotters = "0.3.5"
tracing = "0.1.41"
tracing-forest = "0.1.6"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
rand = "0.8"

opcode-gen = { path = "opcode-gen" }
ssa-builder = { path = "ssa-builder" }

[dev-dependencies]
anyhow = "1.0.87"
tempfile = "3.8.1"
walkdir = "2.5.0"

[[bin]]
name = "spartan-vm"
path = "src/bin/main.rs"

[profile.release]
debug = true
