[package]
name = "native-runner"
version = "0.1.0"
edition = "2021"
description = "Native runner for Spartan VM compiled programs"
build = "build.rs"

[[bin]]
name = "native-runner"
path = "src/main.rs"

[dependencies]
# Field arithmetic
ark-bn254 = "0.5"
ark-ff = "0.5"

# CLI and config
clap = { version = "4", features = ["derive"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }

# Dynamic loading
libloading = "0.8"

# Temp files
tempfile = "3"

# Error handling
anyhow = "1"

# Utilities
hex = "0.4"
num-bigint = "0.4"
