[package]
name = "spartan-vm-interpreter"
version = "0.1.0"
edition = "2024"

[dependencies]
ark-bn254 = "0.5.0"
ark-ff = "0.5.0"
noirc_abi = { git = "https://github.com/reilabs/noir.git", branch = "spartan-vm", package = "noirc_abi" }
tracing = "0.1.41"
plotters = "0.3.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

opcode-gen = { path = "../opcode-gen" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["console"] }

[profile.release]
debug = true
