[package]
name = "spartan-vm-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1.0"
ark-bn254 = "0.5.0"
ark-ff = "0.5.0"
num-bigint = "0.4"
console_error_panic_hook = "0.1"
wee_alloc = "0.4"
getrandom = { version = "0.2", features = ["js"] }
acir_field = { git = "https://github.com/reilabs/noir.git", branch = "spartan-vm", package = "acir_field" }
noirc_abi = { git = "https://github.com/reilabs/noir.git", branch = "spartan-vm", package = "noirc_abi" }
spartan-vm-interpreter = { path = "../spartan-vm-interpreter" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
tracing-subscriber-wasm = "0.1"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = ["console"]

[profile.release]
opt-level = "z"  # Optimize for size
lto = true
