[package]
name = "ast_evaluator"
version = "0.1.0"
edition = "2024"
description = "A simple, auditable interpreter for Noir's monomorphized AST"

[dependencies]
noirc_frontend = { git = "https://github.com/reilabs/noir.git", branch = "spartan-vm", package = "noirc_frontend" }
noirc_abi = { git = "https://github.com/reilabs/noir.git", branch = "spartan-vm", package = "noirc_abi", features = ["bn254"] }
noirc_driver = { git = "https://github.com/reilabs/noir.git", branch = "spartan-vm", package = "noirc_driver" }
nargo = { git = "https://github.com/reilabs/noir.git", branch = "spartan-vm", package = "nargo" }
nargo_toml = { git = "https://github.com/reilabs/noir.git", branch = "spartan-vm", package = "nargo_toml" }
fm = { git = "https://github.com/reilabs/noir.git", branch = "spartan-vm", package = "fm" }
acvm = { git = "https://github.com/reilabs/noir.git", branch = "spartan-vm", package = "acvm", features = ["bn254"] }
ark-bn254 = "0.5.0"
ark-ff = "0.5.0"
thiserror = "2.0.12"
clap = { version = "4.5", features = ["derive"] }
compat_harness = { path = "../../compat_harness" }

[[bin]]
name = "ast-eval"
path = "src/bin/main.rs"

[[bin]]
name = "compat_test"
path = "src/bin/compat_test.rs"
